@@ -1,2 +1,1 @@
 Makefile
-moc_*
