@@ -3,6 +3,11 @@ qtstalker:
 Stefan Stratigakos
 <sstratos@users.sourceforge.net>
 URL: http://sourceforge.net/projects/qtstalker
+Lead developer.
+
+Marco van Zwetselaar
+<zwets@users.sourceforge.net>
+Debian package maintainer.
 
 
 
