@@ -13,7 +13,7 @@
 <h3>Requirements</h3>
 <ol>
   <li>A Linux or FreeBSD compatible operating system.</li>
-  <li>At least the Qt 3.* development library.
+  <li>At least the Qt 3.2* development library.
     <p></p>
   </li>
 </ol>
